--- a/back_2/css/style.css
+++ b/back_2/css/style.css
@@ -37,7 +37,7 @@ body {
 .box_3 {
 	background-color: #474444;
 	padding: 10px 25px;
-	margin: 10px 0 100px 0;
+	margin-bottom: 100px;
 }
 
 .box_end {
